<resources>
    <string name="app_name">Recurring Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="repeatsLabel">Repeating</string>
    <string name="durationLabel">Every</string>
    <string name="taskNameHint">Task name</string>
    <string name="saveLabel">Save</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="taskSaveSuccess">Task updated</string>
    <string name="taskCreateSuccess">Task created</string>
    <string name="taskSaveFail">Save failed. Please try again.</string>
    <string name="taskNotFound">Task not found. Refresh the task list.</string>
    <string name="startDateLabel">Starting from</string>
    <string name="dueDateLabel">Due:</string>
    <string name="complete_task">complete task</string>
    <string name="dialogCancel">Cancel</string>
    <string name="deleteTaskMessage">Delete task?</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="dueDateDetailLabel">Due around</string>
    <string name="newTask">New task</string>
    <string name="editTask">Edit task</string>
    <string name="overdueStatus">Overdue</string>
    <string name="dueStatus">Due</string>
    <string name="undo">UNDO</string>
    <string name="taskDeleteSuccess">Task deleted</string>
    <string name="taskCompleteSuccess">Task completed</string>
    <string name="taskNameTooLongErrorPrefix">Max character length is</string>
    <string name="durationTooLargeErrorPrefix">Max duration is</string>
    <string name="durationTooSmallError">Duration must be positive</string>
    <string name="taskNameEmptyError">Task name cannot be blank</string>
    <string name="keepEditing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="areYouSureNew">Are you sure you want to discard this task?</string>
    <string name="areYouSureChanges">Are you sure you want to discard changes to this task?</string>
    <string name="notificationsLabel">Send notifications</string>
    <string name="emptyTaskListMessage">No tasks\n\nPress \'+\' to get started</string>
    <string name="emptyTagListMessage">No tags\n\nPress \'+\' to create a tag</string>
    <string name="settings">Settings</string>
    <string name="pref_show_notifications_title">Show notifications</string>
    <string name="pref_show_notifications_summary">Disabling prevents the app from showing any notifications, regardless of individual task notification settings</string>
    <string name="pref_notification_time_title">Notification time</string>
    <string name="pref_notification_time_summary">Time of day to show daily notification</string>
    <string name="pref_max_notificaitons_title">Max number of notifications</string>
    <string name="pref_max_notifications_summary">Never show more than %s notifications simultaneously, even if there are more tasks that meet the notification criteria.</string>
    <string name="tasksDue">tasks due</string>
    <string name="notificationOption_Never">Never</string>
    <string name="notificationOption_Overdue">When overdue</string>
    <string name="notificationOption_OverdueDue">When due or overdue</string>
    <string name="tagsLabel">Tags</string>
    <string name="tagViewHint">Click to add tags</string>
    <string name="create">Create</string>
    <string name="createTag">Create tag</string>
    <string name="tagNameHint">Tag name</string>
    <string name="tagNameTooLongErrorPrefix">Name is too long</string>
    <string name="tagNameEmptyErrorPrefix">Name cannot be empty</string>
    <string name="editTags">Edit tags</string>
    <string name="allTasks">All tasks</string>
    <string name="deleteTagMessage">Delete tag?</string>
    <string name="tagNameExistsError">Tag with this name already exists</string>
    <string name="rename">Rename</string>
    <string name="signOut">Sign out</string>
    <string name="sync">Sync</string>
</resources>
