<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_show_notifications"
        android:title="@string/pref_show_notifications_title"
        android:summary="@string/pref_show_notifications_summary"
        android:defaultValue="true"/>

    <caseydlvr.recurringtasks.ui.settings.TimePreference
        android:dependency="pref_show_notifications"
        android:key="pref_notification_time"
        android:title="@string/pref_notification_time_title"
        android:summary="@string/pref_notification_time_summary"
        android:defaultValue="9:00"/>

    <!-- default value is set dynamically based on Android version in SettingsFragment -->
    <ListPreference
        android:dependency="pref_show_notifications"
        android:key="pref_max_notifications"
        android:title="@string/pref_max_notificaitons_title"
        android:summary="@string/pref_max_notifications_summary"
        android:entries="@array/max_notifications_entries"
        android:entryValues="@array/max_notifications_entries"/>

</PreferenceScreen>