<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="caseydlvr.recurringtasks.ui.TaskActivity">

    <item
        android:id="@+id/action_complete"
        android:title="@string/complete"
        android:icon="@drawable/ic_action_check"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/saveLabel"
        android:orderInCategory="2"
        app:showAsAction="always|withText"/>

</menu>