<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
              <!--xmlns:tools="http://schemas.android.com/tools"-->
              <!--android:orientation="horizontal"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="wrap_content">-->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp">


    <TextView
        android:id="@+id/taskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/completeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Test Task"/>

    <ImageView
        android:id="@+id/completeImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_check"
        android:contentDescription="@string/complete_task"/>

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/dueDateLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskName"/>

    <TextView
        android:id="@+id/dueDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/dueDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/taskName"
        tools:text="4/18/2018"/>

    <TextView
        android:id="@+id/durationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/durationLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueDateLabel"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/durationLabel"
        app:layout_constraintTop_toBottomOf="@+id/dueDateLabel"
        tools:text="3"/>

    <TextView
        android:id="@+id/durationUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/duration"
        app:layout_constraintTop_toBottomOf="@+id/dueDateLabel"
        tools:text="months"/>

</android.support.constraint.ConstraintLayout>