<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/durationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/screenLeftMargin"
        app:layout_constraintTop_toTopOf="@+id/durationLayout"
        app:srcCompat="@drawable/ic_access_time"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/durationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/durationUnit"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/durationLabel"
            android:inputType="number"
            android:paddingStart="0dp"
            android:textSize="18sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/durationUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toStartOf="@+id/screenRightMargin"
        app:layout_constraintTop_toTopOf="@+id/durationLayout"/>

    <Switch
        android:id="@+id/repeating"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:checked="true"
        android:splitTrack="false"
        android:switchPadding="8dp"
        android:text="@string/repeatsLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/durationLayout"
        tools:checked="true"/>

    <View
        android:id="@+id/durationDivider"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/repeating"/>

    <ImageView
        android:id="@+id/dateImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/screenLeftMargin"
        app:layout_constraintTop_toTopOf="@+id/startDateLabel"
        app:srcCompat="@drawable/ic_date_range"/>

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/startDateLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/durationDivider"/>

    <TextView
        android:id="@+id/startDate"
        style="?android:attr/spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:freezesText="true"
        app:layout_constraintEnd_toStartOf="@+id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel"
        tools:text="December 29, 2017"/>

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dueDateDetailLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/startDate"/>

    <TextView
        android:id="@+id/dueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/dueDateLabel"
        tools:text="January 29, 2018"/>

    <View
        android:id="@+id/datesDivider"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/dueDate"/>

    <ImageView
        android:id="@+id/tagsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/screenLeftMargin"
        app:layout_constraintTop_toTopOf="@+id/tagsLabel"
        app:srcCompat="@drawable/ic_label"/>

    <TextView
        android:id="@+id/tagsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tagsLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/datesDivider"/>

    <TextView
        android:id="@+id/tagsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/tagsLabel"
        tools:text="Test tag"/>

    <View
        android:id="@+id/tagsDivider"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/tagsText"/>

    <ImageView
        android:id="@+id/notificationsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/screenLeftMargin"
        app:layout_constraintTop_toTopOf="@+id/notificationOptionLabel"
        app:srcCompat="@drawable/ic_notifications"/>

    <TextView
        android:id="@+id/notificationOptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notificationsLabel"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/tagsDivider"/>

    <Spinner
        android:id="@+id/notificationOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@+id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/notificationOptionLabel"/>

    <View
        android:id="@+id/notificationsDivider"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/screenRightMargin"
        app:layout_constraintStart_toStartOf="@id/contentLeftMargin"
        app:layout_constraintTop_toBottomOf="@+id/notificationOption"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentLeftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screenRightMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screenLeftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
